--- a/layout/style/res/forms.css
+++ b/layout/style/res/forms.css
@@ -699,6 +699,16 @@ button {
   justify-items: inherit;
 }
 
+@supports -moz-bool-pref("dom.forms.button.standards_compliant") {
+  /*
+   * Button content does historically not receive pointer events.
+   * This pref is enabled by default and can disabled to get Webkit behavior.
+   */
+  button * {
+    pointer-events: none !important;
+  }
+}
+
 button:hover,
 input[type="color"]:-moz-system-metric(color-picker-available):hover,
 input[type="reset"]:hover,
