--- a/devtools/client/themes/common.css
+++ b/devtools/client/themes/common.css
@@ -652,7 +652,7 @@ checkbox:-moz-focusring {
 .devtools-searchinput-clear {
   position: absolute;
   top: 3.5px;
-  offset-inline-end: 7px;
+  inset-inline-end: 7px;
   padding: 0;
   border: 0;
   width: 16px;
