--- a/layout/style/res/html.css
+++ b/layout/style/res/html.css
@@ -808,8 +808,8 @@ input[type="date"] > xul|datetimebox {
 
 dialog {
   position: absolute;
-  offset-inline-start: 0;
-  offset-inline-end: 0;
+  inset-inline-start: 0;
+  inset-inline-end: 0;
   color: black;
   margin: auto;
   border-width: initial;
