Issue #2510 - Unprefix -moz-fit-content
No aliasing since this has been out for a while.
Devtools db regenerated with `mach devtools-css-db`

Resolves #2510

--- a/layout/style/res/html.css
+++ b/layout/style/res/html.css
@@ -818,7 +818,7 @@ dialog {
   border-image: initial;
   padding: 1em;
   background: white;
-  width: -moz-fit-content;
+  width: fit-content;
 }
 
 dialog:not([open]) {
